force-app/main/default/objects/Order_Renewal_Schedule__mdt/Order_Renewal_Schedule__mdt.object-meta.xml
<CustomObject>
    <description>Renewal schedule settings for monthly ELM subscriptions.</description>
    <label>Order Renewal Schedule</label>
    <pluralLabel>Order Renewal Schedules</pluralLabel>
</CustomObject>