force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date value of the range&apos;s end date. I.E. for a range of 1/15 - 2/14, the value for this field would be 14.</inlineHelpText>
    <label>End Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>