force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/End_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Month__c</fullName>
    <inlineHelpText>Numerical representation of the month for the range&apos;s end date. I.E. for a range of 1/15 - 2/14, the value for this field would be 2.</inlineHelpText>
    <label>End Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>