force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>Date value of the renewal date. I.E. for a range of 1/15 - 2/14 with a renewal date of April 2nd, the value for this field would be 2 (from 4/2).</inlineHelpText>
    <label>Renewal Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>