force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/Renewal_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Month__c</fullName>
    <description>Numerical Month of Renewal. I.E. 01 - January, 02 - February, etc.</description>
    <inlineHelpText>Numerical value for the renewal month. I.E. for a range of 1/15 - 2/14 with a renewal date of April 2nd, the value for this field would be 4, from 4/2.</inlineHelpText>
    <label>Renewal Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>