force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date value for the beginning date of the range. I.E. for a range of 1/15 - 2/14, the value for this field would be 15.</inlineHelpText>
    <label>Start Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>