force-app/main/default/objects/Order_Renewal_Schedule__mdt/fields/Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Month__c</fullName>
    <inlineHelpText>Numerical representation of the starting range&apos;s month. I.E. for a range of 1/15 - 2/14, the value for this field would be 1.</inlineHelpText>
    <label>Start Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>