force-app/main/default/objects/Order_Renewal_Schedule__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Start_Month__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Month__c</columns>
    <columns>End_Date__c</columns>
    <columns>Renewal_Month__c</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>